force-app/main/default/objects/Metadata_Driven_Trigger__mdt/fields/Bypass_Email__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Email__c</fullName>
    <label>Bypass Email</label>
    <type>Email</type>
</CustomField>