force-app/main/default/objects/Metadata_Driven_Trigger__mdt/fields/Bypass_Permission__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Permission__c</fullName>
    <label>Bypass Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>