force-app/main/default/objects/Metadata_Driven_Trigger__mdt/fields/Bypass_Username__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Username__c</fullName>
    <label>Bypass Username</label>
    <type>Email</type>
</CustomField>