force-app/main/default/objects/Metadata_Driven_Trigger__mdt/fields/Required_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission__c</fullName>
    <label>Required Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>